Fix spacings in top of sponsorships table, and navigation to the sponsorship page (so the back button works as expected)

--- a/public/style/components/tag-search/_index.scss
+++ b/public/style/components/tag-search/_index.scss
@@ -41,6 +41,7 @@
 
 }
 
-.tag-search__input {
+.tag-search__input,
+.tag-search__select {
   margin-right: $standard-padding;
 }
